Add features
fix user type management
fix subscription
/bin/bash: ligne 1: :wq : commande introuvable
